Fixed gap between 'its time' and another text

--- a/style.css
+++ b/style.css
@@ -188,22 +188,24 @@ body{
 }
 .container-text{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    align-self: center;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .time{
     font-weight: 700;
     font-size: 24px;
     color: white;
+    margin-bottom: 0px;
 }
 
-.container-text, .p{
+.container-text, p{
     color: #e5e7eb;
-    margin: 0px;
+    margin-top: 0px;
     padding: 0px;
-    flex-shrink: 1;
+    font-size: 18px;
 }
 
 .signup{
